bk_ida/gccida/g0/find_reload_regs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reload_regs/src/reload1.c:2303:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)chain->rld[i].reg_rtx + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reload_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reload_regs/src/reload1.c:2304:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)chain->rld[i].reg_rtx + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reload_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reload_regs/src/reload1.c:2325:61: error: ISO C requires a named parameter before '...'
specqsort( ( char *)reload_order, n_reloads, 2, ( int ( *)( ...))reload_reg_class_lower); 
                                                            ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_reload_regs/src/obj/reload1.o] Error 1
